demos/luac01/LuaParser.cpp

// Generated from Lua.g4 by ANTLR 4.10.1


#include "LuaListener.h"
#include "LuaVisitor.h"

#include "LuaParser.h"


using namespace antlrcpp;
using namespace luac;

using namespace antlr4;

namespace {

struct LuaParserStaticData final {
  LuaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  LuaParserStaticData(const LuaParserStaticData&) = delete;
  LuaParserStaticData(LuaParserStaticData&&) = delete;
  LuaParserStaticData& operator=(const LuaParserStaticData&) = delete;
  LuaParserStaticData& operator=(LuaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag luaParserOnceFlag;
LuaParserStaticData *luaParserStaticData = nullptr;

void luaParserInitialize() {
  assert(luaParserStaticData == nullptr);
  auto staticData = std::make_unique<LuaParserStaticData>(
    std::vector<std::string>{
      "chunk", "block", "stat", "attnamelist", "attrib", "retstat", "label", 
      "funcname", "varlist", "namelist", "explist", "exp", "prefixexp", 
      "functioncall", "varOrExp", "var_", "varSuffix", "nameAndArgs", "args", 
      "functiondef", "funcbody", "parlist", "tableconstructor", "fieldlist", 
      "field", "fieldsep", "operatorOr", "operatorAnd", "operatorComparison", 
      "operatorStrcat", "operatorAddSub", "operatorMulDivMod", "operatorBitwise", 
      "operatorUnary", "operatorPower", "number", "string"
    },
    std::vector<std::string>{
      "", "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", 
      "'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", 
      "','", "'in'", "'function'", "'local'", "'<'", "'>'", "'return'", 
      "'::'", "'.'", "':'", "'nil'", "'false'", "'true'", "'...'", "'('", 
      "')'", "'['", "']'", "'{'", "'}'", "'or'", "'and'", "'<='", "'>='", 
      "'~='", "'=='", "'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", 
      "'&'", "'|'", "'~'", "'<<'", "'>>'", "'not'", "'#'", "'^'"
    },
    std::vector<std::string>{
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", "", 
      "", "", "", "", "", "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
      "INT", "HEX", "FLOAT", "HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", 
      "SHEBANG"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  luaParserStaticData = staticData.release();
}

}

LuaParser::LuaParser(TokenStream *input) : LuaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

LuaParser::LuaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  LuaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *luaParserStaticData->atn, luaParserStaticData->decisionToDFA, luaParserStaticData->sharedContextCache, options);
}

LuaParser::~LuaParser() {
  delete _interpreter;
}

const atn::ATN& LuaParser::getATN() const {
  return *luaParserStaticData->atn;
}

std::string LuaParser::getGrammarFileName() const {
  return "Lua.g4";
}

const std::vector<std::string>& LuaParser::getRuleNames() const {
  return luaParserStaticData->ruleNames;
}

const dfa::Vocabulary& LuaParser::getVocabulary() const {
  return luaParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView LuaParser::getSerializedATN() const {
  return luaParserStaticData->serializedATN;
}


//----------------- ChunkContext ------------------------------------------------------------------

LuaParser::ChunkContext::ChunkContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuaParser::BlockContext* LuaParser::ChunkContext::block() {
  return getRuleContext<LuaParser::BlockContext>(0);
}

tree::TerminalNode* LuaParser::ChunkContext::EOF() {
  return getToken(LuaParser::EOF, 0);
}


size_t LuaParser::ChunkContext::getRuleIndex() const {
  return LuaParser::RuleChunk;
}

void LuaParser::ChunkContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterChunk(this);
}

void LuaParser::ChunkContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitChunk(this);
}


std::any LuaParser::ChunkContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitChunk(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::ChunkContext* LuaParser::chunk() {
  ChunkContext *_localctx = _tracker.createInstance<ChunkContext>(_ctx, getState());
  enterRule(_localctx, 0, LuaParser::RuleChunk);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(74);
    block();
    setState(75);
    match(LuaParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- BlockContext ------------------------------------------------------------------

LuaParser::BlockContext::BlockContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<LuaParser::StatContext *> LuaParser::BlockContext::stat() {
  return getRuleContexts<LuaParser::StatContext>();
}

LuaParser::StatContext* LuaParser::BlockContext::stat(size_t i) {
  return getRuleContext<LuaParser::StatContext>(i);
}

LuaParser::RetstatContext* LuaParser::BlockContext::retstat() {
  return getRuleContext<LuaParser::RetstatContext>(0);
}


size_t LuaParser::BlockContext::getRuleIndex() const {
  return LuaParser::RuleBlock;
}

void LuaParser::BlockContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBlock(this);
}

void LuaParser::BlockContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBlock(this);
}


std::any LuaParser::BlockContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitBlock(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::BlockContext* LuaParser::block() {
  BlockContext *_localctx = _tracker.createInstance<BlockContext>(_ctx, getState());
  enterRule(_localctx, 2, LuaParser::RuleBlock);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(80);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LuaParser::T__0)
      | (1ULL << LuaParser::T__2)
      | (1ULL << LuaParser::T__3)
      | (1ULL << LuaParser::T__4)
      | (1ULL << LuaParser::T__6)
      | (1ULL << LuaParser::T__7)
      | (1ULL << LuaParser::T__9)
      | (1ULL << LuaParser::T__13)
      | (1ULL << LuaParser::T__16)
      | (1ULL << LuaParser::T__17)
      | (1ULL << LuaParser::T__21)
      | (1ULL << LuaParser::T__28)
      | (1ULL << LuaParser::NAME))) != 0)) {
      setState(77);
      stat();
      setState(82);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuaParser::T__20) {
      setState(83);
      retstat();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatContext ------------------------------------------------------------------

LuaParser::StatContext::StatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuaParser::VarlistContext* LuaParser::StatContext::varlist() {
  return getRuleContext<LuaParser::VarlistContext>(0);
}

LuaParser::ExplistContext* LuaParser::StatContext::explist() {
  return getRuleContext<LuaParser::ExplistContext>(0);
}

LuaParser::FunctioncallContext* LuaParser::StatContext::functioncall() {
  return getRuleContext<LuaParser::FunctioncallContext>(0);
}

LuaParser::LabelContext* LuaParser::StatContext::label() {
  return getRuleContext<LuaParser::LabelContext>(0);
}

tree::TerminalNode* LuaParser::StatContext::NAME() {
  return getToken(LuaParser::NAME, 0);
}

std::vector<LuaParser::BlockContext *> LuaParser::StatContext::block() {
  return getRuleContexts<LuaParser::BlockContext>();
}

LuaParser::BlockContext* LuaParser::StatContext::block(size_t i) {
  return getRuleContext<LuaParser::BlockContext>(i);
}

std::vector<LuaParser::ExpContext *> LuaParser::StatContext::exp() {
  return getRuleContexts<LuaParser::ExpContext>();
}

LuaParser::ExpContext* LuaParser::StatContext::exp(size_t i) {
  return getRuleContext<LuaParser::ExpContext>(i);
}

LuaParser::NamelistContext* LuaParser::StatContext::namelist() {
  return getRuleContext<LuaParser::NamelistContext>(0);
}

LuaParser::FuncnameContext* LuaParser::StatContext::funcname() {
  return getRuleContext<LuaParser::FuncnameContext>(0);
}

LuaParser::FuncbodyContext* LuaParser::StatContext::funcbody() {
  return getRuleContext<LuaParser::FuncbodyContext>(0);
}

LuaParser::AttnamelistContext* LuaParser::StatContext::attnamelist() {
  return getRuleContext<LuaParser::AttnamelistContext>(0);
}


size_t LuaParser::StatContext::getRuleIndex() const {
  return LuaParser::RuleStat;
}

void LuaParser::StatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStat(this);
}

void LuaParser::StatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStat(this);
}


std::any LuaParser::StatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitStat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::StatContext* LuaParser::stat() {
  StatContext *_localctx = _tracker.createInstance<StatContext>(_ctx, getState());
  enterRule(_localctx, 4, LuaParser::RuleStat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(167);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(86);
      match(LuaParser::T__0);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(87);
      varlist();
      setState(88);
      match(LuaParser::T__1);
      setState(89);
      explist();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(91);
      functioncall();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(92);
      label();
      break;
    }

    case 5: {
      enterOuterAlt(_localctx, 5);
      setState(93);
      match(LuaParser::T__2);
      break;
    }

    case 6: {
      enterOuterAlt(_localctx, 6);
      setState(94);
      match(LuaParser::T__3);
      setState(95);
      match(LuaParser::NAME);
      break;
    }

    case 7: {
      enterOuterAlt(_localctx, 7);
      setState(96);
      match(LuaParser::T__4);
      setState(97);
      block();
      setState(98);
      match(LuaParser::T__5);
      break;
    }

    case 8: {
      enterOuterAlt(_localctx, 8);
      setState(100);
      match(LuaParser::T__6);
      setState(101);
      exp(0);
      setState(102);
      match(LuaParser::T__4);
      setState(103);
      block();
      setState(104);
      match(LuaParser::T__5);
      break;
    }

    case 9: {
      enterOuterAlt(_localctx, 9);
      setState(106);
      match(LuaParser::T__7);
      setState(107);
      block();
      setState(108);
      match(LuaParser::T__8);
      setState(109);
      exp(0);
      break;
    }

    case 10: {
      enterOuterAlt(_localctx, 10);
      setState(111);
      match(LuaParser::T__9);
      setState(112);
      exp(0);
      setState(113);
      match(LuaParser::T__10);
      setState(114);
      block();
      setState(122);
      _errHandler->sync(this);
      _la = _input->LA(1);
      while (_la == LuaParser::T__11) {
        setState(115);
        match(LuaParser::T__11);
        setState(116);
        exp(0);
        setState(117);
        match(LuaParser::T__10);
        setState(118);
        block();
        setState(124);
        _errHandler->sync(this);
        _la = _input->LA(1);
      }
      setState(127);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == LuaParser::T__12) {
        setState(125);
        match(LuaParser::T__12);
        setState(126);
        block();
      }
      setState(129);
      match(LuaParser::T__5);
      break;
    }

    case 11: {
      enterOuterAlt(_localctx, 11);
      setState(131);
      match(LuaParser::T__13);
      setState(132);
      match(LuaParser::NAME);
      setState(133);
      match(LuaParser::T__1);
      setState(134);
      exp(0);
      setState(135);
      match(LuaParser::T__14);
      setState(136);
      exp(0);
      setState(139);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == LuaParser::T__14) {
        setState(137);
        match(LuaParser::T__14);
        setState(138);
        exp(0);
      }
      setState(141);
      match(LuaParser::T__4);
      setState(142);
      block();
      setState(143);
      match(LuaParser::T__5);
      break;
    }

    case 12: {
      enterOuterAlt(_localctx, 12);
      setState(145);
      match(LuaParser::T__13);
      setState(146);
      namelist();
      setState(147);
      match(LuaParser::T__15);
      setState(148);
      explist();
      setState(149);
      match(LuaParser::T__4);
      setState(150);
      block();
      setState(151);
      match(LuaParser::T__5);
      break;
    }

    case 13: {
      enterOuterAlt(_localctx, 13);
      setState(153);
      match(LuaParser::T__16);
      setState(154);
      funcname();
      setState(155);
      funcbody();
      break;
    }

    case 14: {
      enterOuterAlt(_localctx, 14);
      setState(157);
      match(LuaParser::T__17);
      setState(158);
      match(LuaParser::T__16);
      setState(159);
      match(LuaParser::NAME);
      setState(160);
      funcbody();
      break;
    }

    case 15: {
      enterOuterAlt(_localctx, 15);
      setState(161);
      match(LuaParser::T__17);
      setState(162);
      attnamelist();
      setState(165);
      _errHandler->sync(this);

      _la = _input->LA(1);
      if (_la == LuaParser::T__1) {
        setState(163);
        match(LuaParser::T__1);
        setState(164);
        explist();
      }
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttnamelistContext ------------------------------------------------------------------

LuaParser::AttnamelistContext::AttnamelistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> LuaParser::AttnamelistContext::NAME() {
  return getTokens(LuaParser::NAME);
}

tree::TerminalNode* LuaParser::AttnamelistContext::NAME(size_t i) {
  return getToken(LuaParser::NAME, i);
}

std::vector<LuaParser::AttribContext *> LuaParser::AttnamelistContext::attrib() {
  return getRuleContexts<LuaParser::AttribContext>();
}

LuaParser::AttribContext* LuaParser::AttnamelistContext::attrib(size_t i) {
  return getRuleContext<LuaParser::AttribContext>(i);
}


size_t LuaParser::AttnamelistContext::getRuleIndex() const {
  return LuaParser::RuleAttnamelist;
}

void LuaParser::AttnamelistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttnamelist(this);
}

void LuaParser::AttnamelistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttnamelist(this);
}


std::any LuaParser::AttnamelistContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitAttnamelist(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::AttnamelistContext* LuaParser::attnamelist() {
  AttnamelistContext *_localctx = _tracker.createInstance<AttnamelistContext>(_ctx, getState());
  enterRule(_localctx, 6, LuaParser::RuleAttnamelist);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(169);
    match(LuaParser::NAME);
    setState(170);
    attrib();
    setState(176);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == LuaParser::T__14) {
      setState(171);
      match(LuaParser::T__14);
      setState(172);
      match(LuaParser::NAME);
      setState(173);
      attrib();
      setState(178);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AttribContext ------------------------------------------------------------------

LuaParser::AttribContext::AttribContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::AttribContext::NAME() {
  return getToken(LuaParser::NAME, 0);
}


size_t LuaParser::AttribContext::getRuleIndex() const {
  return LuaParser::RuleAttrib;
}

void LuaParser::AttribContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterAttrib(this);
}

void LuaParser::AttribContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitAttrib(this);
}


std::any LuaParser::AttribContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitAttrib(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::AttribContext* LuaParser::attrib() {
  AttribContext *_localctx = _tracker.createInstance<AttribContext>(_ctx, getState());
  enterRule(_localctx, 8, LuaParser::RuleAttrib);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(182);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuaParser::T__18) {
      setState(179);
      match(LuaParser::T__18);
      setState(180);
      match(LuaParser::NAME);
      setState(181);
      match(LuaParser::T__19);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- RetstatContext ------------------------------------------------------------------

LuaParser::RetstatContext::RetstatContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

LuaParser::ExplistContext* LuaParser::RetstatContext::explist() {
  return getRuleContext<LuaParser::ExplistContext>(0);
}


size_t LuaParser::RetstatContext::getRuleIndex() const {
  return LuaParser::RuleRetstat;
}

void LuaParser::RetstatContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterRetstat(this);
}

void LuaParser::RetstatContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitRetstat(this);
}


std::any LuaParser::RetstatContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<LuaVisitor*>(visitor))
    return parserVisitor->visitRetstat(this);
  else
    return visitor->visitChildren(this);
}

LuaParser::RetstatContext* LuaParser::retstat() {
  RetstatContext *_localctx = _tracker.createInstance<RetstatContext>(_ctx, getState());
  enterRule(_localctx, 10, LuaParser::RuleRetstat);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(184);
    match(LuaParser::T__20);
    setState(186);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << LuaParser::T__16)
      | (1ULL << LuaParser::T__24)
      | (1ULL << LuaParser::T__25)
      | (1ULL << LuaParser::T__26)
      | (1ULL << LuaParser::T__27)
      | (1ULL << LuaParser::T__28)
      | (1ULL << LuaParser::T__32)
      | (1ULL << LuaParser::T__42)
      | (1ULL << LuaParser::T__49)
      | (1ULL << LuaParser::T__52)
      | (1ULL << LuaParser::T__53)
      | (1ULL << LuaParser::NAME)
      | (1ULL << LuaParser::NORMALSTRING)
      | (1ULL << LuaParser::CHARSTRING)
      | (1ULL << LuaParser::LONGSTRING)
      | (1ULL << LuaParser::INT)
      | (1ULL << LuaParser::HEX)
      | (1ULL << LuaParser::FLOAT)
      | (1ULL << LuaParser::HEX_FLOAT))) != 0)) {
      setState(185);
      explist();
    }
    setState(189);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == LuaParser::T__0) {
      setState(188);
      match(LuaParser::T__0);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LabelContext ------------------------------------------------------------------

LuaParser::LabelContext::LabelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* LuaParser::LabelContext::NAME() {
  return getToken(LuaParser::NAME, 0);
}


size_t LuaParser::LabelContext::getRuleIndex() const {
  return LuaParser::RuleLabel;
}

void LuaParser::LabelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<LuaListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLabel(this);
}
